kubernetes/portainer-agent/portainer-agent.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: portainer-agent
  name: portainer-agent
spec:
  selector:
    app: portainer-agent
  ports:
    - protocol: TCP
      name: api
      port: 9001
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-agent-headless
  namespace: portainer-agent
spec:
  clusterIP: None
  selector:
    app: portainer-agent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-agent
  namespace: portainer-agent
spec:
  selector:
    matchLabels:
      app: portainer-agent
  template:
    metadata:
      labels:
        app: portainer-agent
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
        - name: portainer-agent
          image: portainer/agent:2.21.4
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
              protocol: TCP
